RESOLVED FIXED161781
URLParser: Handle \ in paths of special URLs according to spec
https://bugs.webkit.org/show_bug.cgi?id=161781
Summary URLParser: Handle \ in paths of special URLs according to spec
Alex Christensen
Reported 2016-09-08 18:29:38 PDT
URLParser: Handle \ in paths of special URLs according to spec
Attachments
Patch (6.72 KB, patch)
2016-09-08 18:30 PDT, Alex Christensen
thorton: review+
Alex Christensen
Comment 1 2016-09-08 18:30:18 PDT
WebKit Commit Bot
Comment 2 2016-09-08 18:31:37 PDT
Attachment 288373 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebCore/URLParser.cpp:259: One space before end of line comments [whitespace/comments] [5] ERROR: Tools/TestWebKitAPI/Tests/WebCore/URLParser.cpp:259: Should have a space between // and comment [whitespace/comments] [4] ERROR: Tools/TestWebKitAPI/Tests/WebCore/URLParser.cpp:402: One space before end of line comments [whitespace/comments] [5] ERROR: Tools/TestWebKitAPI/Tests/WebCore/URLParser.cpp:402: Should have a space between // and comment [whitespace/comments] [4] ERROR: Tools/TestWebKitAPI/Tests/WebCore/URLParser.cpp:403: One space before end of line comments [whitespace/comments] [5] ERROR: Tools/TestWebKitAPI/Tests/WebCore/URLParser.cpp:403: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 6 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3 2016-09-08 18:34:30 PDT
Note You need to log in before you can comment on or make changes to this bug.