Source/WebCore/platform/URLParser.h
@@ -42,6 +42,7 @@ public:
 private:
     URL m_url;
     StringBuilder m_buffer;
+    bool m_urlIsSpecial { false };
     void parseAuthority(StringView::CodePoints::Iterator&, const StringView::CodePoints::Iterator& end);
     bool parseHost(StringView::CodePoints::Iterator&, const StringView::CodePoints::Iterator& end);
     bool parsePort(StringView::CodePoints::Iterator&, const StringView::CodePoints::Iterator& end);
